# MediaManager

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.dev.toml  config.example.toml  docker-compose.dev.yaml  docker-compose.yaml  mediamanager-startup.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  build-push-backend.yml  build-push-metadata_relay.yml
Writerside/: Writerside_libraries.tree  mm.tree  redirection-rules.xml  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Advanced-Features.md  Configuration.md  Custom-Libraries.md  Custom-port.md  Indexer-Settings.md  Introduction.topic  Logging.md  Notifications.md  Scoring-Rulesets.md  Screenshots.md  User-Guide.md  api-reference.md  authentication-setup.md  configuration-backend.md  configuration-overview.md  database-configuration.md  developer-guide.md  download-client-configuration.md  metadata-provider-configuration.md  notes.topic  qBittorrent-Category.md  troubleshooting.md  url-prefix.md
alembic/: env.py
alembic/versions/: 1801d9f5a275_add_library_field_to_movie_and_show_.py  1f340754640a_add_continuous_download_column_to_show_.py  21a19f0675f9_increase_access_token_length.py  (+6 more)
media_manager/: config.py  exceptions.py  main.py
metadata_relay/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
metadata_relay/app/: tmdb.py  tvdb.py
web/: .env.example  .gitignore  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: ambient.d.ts  (+3 more)
(+213 files in other folders)
