[project]
name = "metadata-relay"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "starlette-exporter>=0.23.0",
    "tmdbsimple>=2.9.1",
    "tvdb-v4-official>=1.1.0",
    "uvicorn>=0.34.3",
    "valkey>=6.1.0",
]
